
message ZkRefMaterial {
  required int32 refId = 1;
  required bool isReference = 2;

  optional ZkMaterial data = 100;
}

message ZkMaterial {
  optional ZkRefTexture texture = 1;
}

message ZkRefTexture {
  required int32 refId = 1;
  required bool isReference = 2;

  optional ZkTexture data = 100;
}

message ZkTexture {
  optional string id = 1;
  optional int32 width = 2;
  optional int32 height = 3;
  optional bytes dataArray = 4;
}